# FMTDev

./: ArmControl.py  Armclient.py  app.js  beepRoboticsSocket.js  handctrl.py  main.py
Robotics/Version 0.1/: .ArmCTRL.py.un~  .ArmClient2.py.un~  .ArmFDBK.py.un~  .Armclient.py.un~  ArmCTRL.py  ArmCTRL.py~  ArmClient2.py~  ArmFDBK.py~  Armclient.py  Armclient.py~
Robotics/Version 0.1/qbsofthand_industry_api_1.0.3/: CMakeLists.txt
Robotics/Version 0.1/qbsofthand_industry_api_1.0.3/src/: main.cpp  main_org.cpp
Robotics/Version 0.2/: BOM.xlsx  Program documentation.docx  Switch Box.dwg  beepRoboticsSocket.js  log.txt  main.py  robotCTRL.py  robotFDBK.py
Robotics/Version 0.2/Arduino/: .testA.py.swp  .testA.py.un~  Demo.json  testA.py~
Robotics/Version 0.2/Testing/: .test.py.un~  ArmClient2.py  ArmClient3.py  Recvimg.py  armfbk.py  dashboard - org.py  master.py  test.py
Robotics/Version 0.2/nodetest/: .rnd  (+8 more)
Version 1/: ArmControl.py  beepRoboticsSocket.js  handctrl.py
Version 2/: .TestScrip.py.un~  .beepRoboticsSocket.js.un~  .dashboard.py.un~  .main.py.un~  .master.py.swp  ArmClient2.py  BOM.xlsx  Dashboard.xlsx  Program documentation.docx  TestScrip.py  TestScrip.py~  beepRoboticsSocket.js  beepRoboticsSocket.js~  dashboard.py  dashboard.py~  log.txt  main.py  main.py~  nodetest.js  nodetest2.js
Version 2/Testing/: test.py~
qbsofthand_industry_api_1.0.3/: README.md  qbsofthand_industry_api_example
qbsofthand_industry_api_1.0.3/libs/: libqbsofthand_industry_api_x64.lib  libqbsofthand_industry_api_x86.lib
qbsofthand_industry_api_1.0.3/src/: main.cpp
(+9 files in other folders)
